# Avg.-Tip-by-Time-Party-Size

./: main.py  pyproject.toml
